packages/gatsby-theme-carbon/src/components/ImageCard/image-card.scss
.#{$prefix}--image-card .#{$prefix}--tile {
  height: 100%;
  padding: $spacing-05 25% $spacing-05 $spacing-05;
  position: relative;
  text-decoration: none;

  &::after {
    position: absolute;
    top: 0;
    left: 0;
    content: '';
    width: calc(100% - 1px); // 1px to offset negative `left` positioning
    height: calc(100% - 1px); // 1px to offset negative `top` positioning
    outline: 3px solid transparent;
    outline-offset: -3px;
    transition: outline motion(standard, productive) $duration--fast-01;
  }
}

.#{$prefix}--image-card .#{$prefix}--tile:focus {
  outline: none;

  &::after {
    outline: 3px solid $focus;
  }
}

.#{$prefix}--image-card__title {
  @include carbon--type-style('productive-heading-03');
  text-decoration: none;
  color: $text-04;
  position: relative;
  z-index: 1;
}

.#{$prefix}--image-card__subtitle {
  @include carbon--type-style('heading-01');
  font-weight: 400;
  text-decoration: none;
  color: $text-04;
  position: absolute;
  bottom: 1rem;
  left: 1rem;
  z-index: 1;
}

.#{$prefix}--image-card__icon--action {
  position: absolute;
  bottom: 1rem;
  right: 1rem;
  width: 20px;
  height: 20px;
  z-index: 1;
}

.#{$prefix}--image-card__icon--action svg {
  fill: $carbon--gray-10; //$icon-01 for grsay 90 theme
}

// Image
.#{$prefix}--image-card__img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.#{$prefix}--image-card__img .gatsby-resp-image-wrapper,
.#{$prefix}--image-card__img img[src*='svg'],
.#{$prefix}--image-card__img img[src*='gif'] {
  position: relative;
  width: 100%;
  height: 100%;
  max-width: 100% !important;
  top: -1px;
  left: -1px;
}

.#{$prefix}--image-card__img:after {
  position: absolute;
  top: 0;
  left: 0;
  content: '';
  width: 100%;
  height: 100%;
  background: hsla(0, 0%, 100%, 0.08);
  opacity: 0;
  transition: opacity $duration--fast-01;
}

.#{$prefix}--image-card
  .#{$prefix}--tile:hover
  .#{$prefix}--image-card__img:after {
  opacity: 1;
}

// Dark
.#{$prefix}--image-card__title--dark,
.#{$prefix}--image-card__subtitle--dark {
  color: $text-01;
}

.#{$prefix}--image-card__icon--action--dark svg {
  fill: $icon-01;
}

.#{$prefix}--image-card--dark .#{$prefix}--image-card__img:after {
  background: rgba(0, 0, 0, 0.15);
}

// Disabled
.#{$prefix}--image-card--disabled .#{$prefix}--tile:hover {
  cursor: not-allowed;
}

.#{$prefix}--image-card--disabled .#{$prefix}--image-card__title,
.#{$prefix}--image-card--disabled .#{$prefix}--image-card__subtitle {
  color: $disabled-03;
}

.#{$prefix}--image-card--disabled .#{$prefix}--image-card__icon--action svg {
  fill: $disabled-02;
}

.#{$prefix}--image-card--disabled .#{$prefix}--image-card__img:after {
  display: none;
}

// Disabled dark
.#{$prefix}--image-card--disabled .#{$prefix}--image-card__title--dark,
.#{$prefix}--image-card--disabled .#{$prefix}--image-card__subtitle--dark {
  color: $carbon--gray-50; //$disabled-03 for gray 90
}

.#{$prefix}--image-card--disabled
  .#{$prefix}--image-card__icon--action--dark
  svg {
  fill: $carbon--gray-70; //$disabled-02 for gray 90
}

// dark background
.container--dark .#{$prefix}--image-card__img {
  background: $carbon--gray-100;
}

